Fix text blurriness

--- a/src/clarity-angular/layout/_card.clarity.scss
+++ b/src/clarity-angular/layout/_card.clarity.scss
@@ -22,7 +22,7 @@ $card-children-space-between: $clr_baselineRem_0_5;
         border: 1px solid rgba(0, 148, 210, 1);
         cursor: pointer;
         text-decoration: none;
-        transform: translate3d(0, -2px, 0);
+        transform: translateY(-2px);
         transition: border 0.2s ease, transform 0.2s ease;
     }
 
